GNU Classpath import (libgcj-snapshot-20100921).
2010-10-12  Andrew John Hughes  <ahughes@redhat.com>

	Import GNU Classpath (libgcj-snapshot-20100921).

	* libjava/Makefile.in: Regenerated.
	* libjava/javax/swing/text/html/StyleSheet.h,
	* libjava/javax/swing/text/html/MinimalHTMLWriter.h,
	* libjava/javax/swing/text/html/HTMLWriter.h,
	* libjava/javax/xml/stream/XMLEventFactory.h,
	* libjava/javax/xml/stream/XMLOutputFactory.h,
	* libjava/javax/xml/stream/events/Namespace.h,
	* libjava/javax/xml/stream/util/StreamReaderDelegate.h,
	* libjava/javax/security/auth/kerberos/KeyImpl.h,
	* libjava/javax/security/auth/kerberos/KerberosTicket.h:
	Regenerated.
	* libjava/classpath/Makefile.in,
	* libjava/classpath/depcomp,
	* libjava/classpath/scripts/Makefile.in,
	* libjava/classpath/resource/Makefile.in,
	* libjava/classpath/tools/Makefile.in:
	Regenerated.  Use libtool from top-level config directory.
	* libjava/classpath/tools/classes/gnu/classpath/tools/StringToolkit.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/java2xhtml/Java2xhtml.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/java2xhtml/Java2xhtml$State.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/IOToolkit.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$3.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$5.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$7.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$9.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$OptionProcessor.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/RootDocImpl$ResolvedImportClassFile.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/ClassComponent.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/Main$21.class,
	* libjava/classpath/tools/classes/gnu/classpath/tools/gjdoc/TagImpl.class,
	* libjava/classpath/tools/classes/gnu/